--- a/firstpage/index.html
+++ b/firstpage/index.html
@@ -9,21 +9,22 @@
     <div id="wrapper">
 
       <header>
+
           header
       </header>
       <nav>
           <a href="index.html">startsidan</a>
           <a href="info.html">infosidan</a>
           <a href="kontakta.html">kontakta</a>
-
+          <hr>
 
       </nav>
       <main>
         <article class="">
-          startsidan
+        <h2>  startsidan</h2>
         </article>
         <aside class="">
-
+          <ul>
         </aside>
 
 
