--- a/firstpage/info.html
+++ b/firstpage/info.html
@@ -20,7 +20,7 @@
       </nav>
       <main>
         <article class="">
-            info
+          <h2>  info</h2>
         </article>
         <aside class="">
 
