--- a/firstpage/kontakta.html
+++ b/firstpage/kontakta.html
@@ -20,7 +20,7 @@
       </nav>
       <main>
         <article class="">
-          kontakta
+        <h2>  kontakta</h2>
         </article>
         <aside class="">
 
