--- a/javascript/javascript2.html
+++ b/javascript/javascript2.html
@@ -11,9 +11,9 @@
       </div>
 
       <script>
-      document.getElementById("knapp").addEventListener("click", displayDate);
+      document.getElementById("knapp").addEventListener("click", ändratext);
 
-        function displayDate() {
+        function ändratext() {
           alert("test");
             document.getElementById("knapp").innerHTML = "hej";
         }
