--- a/javascript/snow/snow2020.html
+++ b/javascript/snow/snow2020.html
@@ -5,6 +5,8 @@
     <title></title>
 <style>
   body{
+    margin:0px;
+
     overflow:hidden;
     background:#dadada;
   }
@@ -17,6 +19,6 @@
   <body>
 
     <canvas id="canvas" ></canvas>
-      <script src="snow2020.js" charset="utf-8"></script>
+      <script src="boll2020.js" charset="utf-8"></script>
   </body>
 </html>
