--- a/javascript/snow/snow2020.html
+++ b/javascript/snow/snow2020.html
@@ -19,6 +19,6 @@
   <body>
 
     <canvas id="canvas" ></canvas>
-      <script src="boll2020.js" charset="utf-8"></script>
+      <script src="snow2020.js" charset="utf-8"></script>
   </body>
 </html>
